# hummingbot-sdex-connector

./: .autoaccept_config  .bashrc_auto_accept  .claude_agent_oversight.py  .claude_auto_accept  .claude_code_config  .claude_code_startup.py  .claude_compliance_daemon.py  .claude_compliance_integration.py  .claude_compliance_integration.sh  .claude_compliance_monitor.py  .claude_compliance_state.json  .claude_emergency_recovery.sh  .claude_final_enforcement_assessment.py  .claude_hard_enforcement_protocol.py  .claude_mandatory_consensus_protocol.py  .claude_session_guard.py  .claude_session_guard_state.json  .claude_session_init.sh  .claude_session_startup.sh  .claude_session_state.json  .claude_status_enforcement_wrapper.py  .claude_team_auto_startup.py  .claude_team_startup_summary.json  .claude_unified_team_startup.py  .claude_verification_protocol.py  .claude_verified_status_system.py  .clauderc  .coverage  .coverage.an.1136926.XgQVoLvx  .coverage.an.78654.XjRfHYrx  .coverage.an.94542.XFIwPISx  .env  .flake8  .git_workflow_state.json  .gitignore  .inputrc  .mcp.json  .no_confirm  .nvimrc  .pre-commit-config.yaml  (+108 more)
.claude/: agent_memory_system.js  ai_enhanced_agent_system.js  compliance_officer_coordination_plan.md  compliance_violation_escalation.md  mandatory_team_engagement_session_protocols.md  mcp-agent-server.js  memory_aware_workflow.js  shared_knowledge_base.js  team_communication_plan.md  team_engagement_enforcement.py  team_workflow.yaml  update_documentation.py
.claude/agents/: Architect.md  DevOpsEngineer.md  DocumentationEngineer.md  Implementer.md  PerformanceEngineer.md  ProjectManager.md  QAEngineer.md  SecurityEngineer.md  qa-gatekeeper.md  stellar-implementer.md
.compliance/: integrity-checksums.txt  violation-database.json
.github/: COMPLIANCE_GOVERNANCE.md  ci-monitor.py  post-push-ci-monitor.py
.github/hooks/: post-receive
.github/workflows/: ci-health-dashboard.yml  ci.yml  claude-resistant-enforcement.yml  compliance-enforcement.yml  knowledge-base-ci.yml  production-deploy.yml
.pre-commit-hooks/: compliance-guard.py
agent_state/: Architect_state.json  DevOpsEngineer_state.json  DocumentationEngineer_state.json  Implementer_state.json  PerformanceEngineer_state.json  ProjectManager_state.json  QAEngineer_state.json  SecurityEngineer_state.json  task_8180fc3d-a311-4218-910c-34f91e60d0aa.json  task_910445af-bd3c-4693-9815-b9d1b6a907de.json  task_c3e0daae-42ab-43b0-b039-274add9814ea.json
ci-logs/test-results-3.10-7.0.3/: coverage.xml  pytest-results-3.10-7.0.3.xml
config/: README.md  README_networks.md  development.yml  enterprise_features.yaml  integration_testing.yml  networks.yml  production.yml  production_observability.yml  qa_metrics_config.json  security.yml  stellar_networks_env.yml
contracts/: README.md
demo/: README.md  qa_monitoring_demo.py  start_demo.sh
deployment/: staging-deployment-report-20250911-152653.json  staging-deployment-report-20250911-155852.json
docs/: COMPLIANCE_PREVENTION_GUIDE.md  COMPONENT_API_REFERENCE.md  KUBERNETES_DEPLOYMENT_GUIDE.md  PRODUCTION_SECURITY_GUIDE.md  QA_MONITORING_GUIDE.md  QUALITY_GUIDELINES.md  RISK_MANAGEMENT.md  TEAM_WORKFLOW_GUIDE.md  TESTNET_GUIDE.md  USER_ONBOARDING_GUIDE.md  ci-troubleshooting.md  daily_development_workflow.md
hummingbot/: __init__.py
knowledge/: README.md  devops_ci_cd.md  performance_baselines.md  security_best_practices.md
logs/: ci_monitoring_test_results.json  compliance_enforcement.json  compliance_violations.json  consensus_decisions.json  critical_violations.json  verification_history.json  verified_system_status.json
monitoring/: README.md  agent_accountability_system.py  agent_activity_monitor.py  agent_performance_dashboard.py  integration_test_report.json  master_agent_dashboard.py  monitor_cli.py  team_coordination_dashboard.py
observability/: README.md  docker-compose.observability.yml
qa/: quality_catalogue.json  quality_catalogue.yml
reports/: production_readiness_assessment_1757396251.json
scripts/: activate_production_security.py  agent_health_manager.py  agent_manager.py  automated_qa_reporting.py  check-compliance.sh  check-failing-tests.sh  check_critical_coverage.py  check_prerequisites.sh  check_sdk_compatibility.py  ci-push-wrapper.sh  claude_code_agent_workflow.py  claude_code_task_integration.py  compliance-watchdog.py  compliance_gateway.py  compliance_monitor.py  compliance_prevention.py  create-tamper-proof-enforcement.sh  deploy_compliance_system.py  deploy_to_kubernetes.sh  detect-compliance-tampering.sh  git_workflow_enforcer.py  human-only-recovery.sh  install.sh  knowledge_base_indexer.py  knowledge_base_watcher.py  production_readiness_assessment.py  qa_coverage_integration.py  qa_performance_benchmark.py  qa_security_validation.py  quick_validation.py  quick_validation_demo.py  real_multi_agent_workflow.py  run_integration_validation.py  security_validation.py  setup-compliance-prevention.sh  setup_knowledge_base_pipeline.sh  start_production_observability.py  stellar_network_setup.py  system_monitor.py  team_engagement_enforcer.py  (+9 more)
security_tracking/: qa_security_review.md  qa_security_validation_report.json  qa_system_completion_summary.md  requirement_audit_log.json  security_metrics.json  security_requirements.json
test/: __init__.py
tests/: conftest.py
(+383 files in other folders)
